@startuml
' PlantUML placeholder for TaskManager
title TaskManager - generated class diagram

package "com.springboot.MyTodoList.service" {
  class TaskService
  class ProjectService
}

package "com.springboot.MyTodoList.repository" {
  class TaskRepository
}

TaskService --> TaskRepository : persists
TaskService --> ProjectService : coordinates

@enduml
